[project]
name = "altair-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "jupyterlab>=4.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "rise>=5.7.1",
    "vega>=4.1.0",
    "vega-datasets>=0.9.0",
]
